# evan-website

./: .gitignore  .gitmodules  CNAME  Cargo.toml  README.md  Trunk.toml  deploy-ocf.sh  index.html  package.json  setup.sh  tailwind.config.js
.github/workflows/: deploy.yaml  deploy.yml
newsite/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json
newsite/src-tauri/src/: main.rs
newsite/src/components/: decal.rs  features.rs  footer.rs  hero.rs  navigation.rs  poker_elements.rs  team.rs
newsite/src/pages/: contact.rs  decal.rs  home.rs  tournaments.rs
public/: 404.html  sitemap.xml
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: about.rs  footer.rs  mod.rs  navigation.rs  optimized_image.rs  sponsors.rs  theme_provider.rs  theme_toggle.rs
src/pages/: decal.rs  home.rs  mod.rs  people.rs  resources.rs  sponsors.rs  tournaments.rs
